--- a/index.html
+++ b/index.html
@@ -162,7 +162,41 @@
             </div>
         </div>
     </section>
-    
+    <footer >
+        <span></span>
+        <div class="conta">
+            <div class="nav">
+                <div class="navigate">
+                    <div class="quick">
+                        <ul>
+                            <li class="tittle">navega</li>
+                            <li>shop</li>
+                            <li>account</li>
+                            <li>about</li>
+                            <li>contact</li>
+                        </ul>
+                    </div>
+                    <div class="quick">
+                        <ul>
+                            <li class="tittle">ayuda</li>
+                            <li>envios</li>
+                            <li>terminos</li>
+                            <li>faq</li>
+                        </ul>
+                    </div>
+                    <div class="quick">
+                        <ul>
+                            <li class="tittle">social</li>
+                            <li>instagram</li>
+                            <li>twitter</li>
+                            <li>linkedin</li>
+                            <li>github</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     
 
 
